# sdrangel

.github/workflows/: sdrangel.yml
devices/hackrf/: devicehackrf.cpp  devicehackrf.h
plugins/channeltx/modpacket/: packetmod.cpp  packetmodbaseband.h  packetmodsource.cpp  packetmodsource.h
plugins/samplemimo/: CMakeLists.txt
plugins/samplemimo/usrpmimo/: CMakeLists.txt  usrpmimo.cpp  usrpmimo.h  usrpmimogui.cpp  usrpmimogui.h  usrpmimogui.ui  usrpmimoplugin.cpp  usrpmimoplugin.h  usrpmimosettings.cpp  usrpmimosettings.h  usrpmimowebapiadapter.cpp  usrpmimowebapiadapter.h  usrpmithread.cpp  usrpmithread.h  usrpmothread.cpp  usrpmothread.h
plugins/samplesink/hackrfoutput/: hackrfoutput.cpp  hackrfoutput.h  hackrfoutputthread.cpp  hackrfoutputthread.h
sdrbase/dsp/: devicesamplesink.h  samplemififo.cpp  samplemififo.h  samplesourcefifo.h
sdrbase/resources/webapi/doc/html2/: index.html
sdrbase/resources/webapi/doc/swagger/include/: DeviceReports.yaml  DeviceSettings.yaml  USRP.yaml
swagger/sdrangel/api/swagger/include/: DeviceReports.yaml  DeviceSettings.yaml
swagger/sdrangel/code/qt5/client/: SWGDeviceReport.cpp  SWGDeviceReport.h  SWGDeviceSettings.cpp  SWGDeviceSettings.h  SWGModelFactory.h  SWGUSRPMIMOReport.cpp  SWGUSRPMIMOReport.h  SWGUSRPMIMOSettings.cpp  SWGUSRPMIMOSettings.h
